// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`select_distinct_on.sql > line 10 1`] = `
[
  "SELECT DISTINCT ON (string4, ten) string4, two, ten
   FROM onek
   ORDER BY string4 using <, two using <, ten using <",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "distinctClause": [
              {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "string4",
                      },
                    },
                  ],
                  "location": 20,
                },
              },
              {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "ten",
                      },
                    },
                  ],
                  "location": 29,
                },
              },
            ],
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 60,
                  "relname": "onek",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": 91,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "string4",
                          },
                        },
                      ],
                      "location": 77,
                    },
                  },
                  "sortby_dir": "SORTBY_USING",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                  "useOp": [
                    {
                      "String": {
                        "sval": "<",
                      },
                    },
                  ],
                },
              },
              {
                "SortBy": {
                  "location": 104,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "two",
                          },
                        },
                      ],
                      "location": 94,
                    },
                  },
                  "sortby_dir": "SORTBY_USING",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                  "useOp": [
                    {
                      "String": {
                        "sval": "<",
                      },
                    },
                  ],
                },
              },
              {
                "SortBy": {
                  "location": 117,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "ten",
                          },
                        },
                      ],
                      "location": 107,
                    },
                  },
                  "sortby_dir": "SORTBY_USING",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                  "useOp": [
                    {
                      "String": {
                        "sval": "<",
                      },
                    },
                  ],
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 34,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "string4",
                          },
                        },
                      ],
                      "location": 34,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 43,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "two",
                          },
                        },
                      ],
                      "location": 43,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 48,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "ten",
                          },
                        },
                      ],
                      "location": 48,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_distinct_on.sql > line 14 1`] = `
[
  "SELECT DISTINCT ON (string4, ten) string4, ten, two
   FROM onek
   ORDER BY string4 using <, ten using >, two using <",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "distinctClause": [
              {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "string4",
                      },
                    },
                  ],
                  "location": 20,
                },
              },
              {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "ten",
                      },
                    },
                  ],
                  "location": 29,
                },
              },
            ],
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 60,
                  "relname": "onek",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": 91,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "string4",
                          },
                        },
                      ],
                      "location": 77,
                    },
                  },
                  "sortby_dir": "SORTBY_USING",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                  "useOp": [
                    {
                      "String": {
                        "sval": "<",
                      },
                    },
                  ],
                },
              },
              {
                "SortBy": {
                  "location": 104,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "ten",
                          },
                        },
                      ],
                      "location": 94,
                    },
                  },
                  "sortby_dir": "SORTBY_USING",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                  "useOp": [
                    {
                      "String": {
                        "sval": ">",
                      },
                    },
                  ],
                },
              },
              {
                "SortBy": {
                  "location": 117,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "two",
                          },
                        },
                      ],
                      "location": 107,
                    },
                  },
                  "sortby_dir": "SORTBY_USING",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                  "useOp": [
                    {
                      "String": {
                        "sval": "<",
                      },
                    },
                  ],
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 34,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "string4",
                          },
                        },
                      ],
                      "location": 34,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 43,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "ten",
                          },
                        },
                      ],
                      "location": 43,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 48,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "two",
                          },
                        },
                      ],
                      "location": 48,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_distinct_on.sql > line 19 1`] = `
[
  "select distinct on (1) floor(random()) as r, f1 from int4_tbl order by 1,2",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "distinctClause": [
              {
                "A_Const": {
                  "ival": {
                    "ival": 1,
                  },
                  "location": 20,
                },
              },
            ],
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 53,
                  "relname": "int4_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "A_Const": {
                      "ival": {
                        "ival": 1,
                      },
                      "location": 71,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "A_Const": {
                      "ival": {
                        "ival": 2,
                      },
                      "location": 73,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 23,
                  "name": "r",
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "FuncCall": {
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "random",
                                },
                              },
                            ],
                            "location": 29,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "floor",
                          },
                        },
                      ],
                      "location": 23,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 45,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "f1",
                          },
                        },
                      ],
                      "location": 45,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_distinct_on.sql > line 27 1`] = `
[
  "EXPLAIN (COSTS OFF)
SELECT DISTINCT ON (four) four,two
   FROM tenk1 WHERE four = 0 ORDER BY 1",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 9,
                },
              },
            ],
            "query": {
              "SelectStmt": {
                "distinctClause": [
                  {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "four",
                          },
                        },
                      ],
                      "location": 40,
                    },
                  },
                ],
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 63,
                      "relname": "tenk1",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "sortClause": [
                  {
                    "SortBy": {
                      "location": -1,
                      "node": {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 93,
                        },
                      },
                      "sortby_dir": "SORTBY_DEFAULT",
                      "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                    },
                  },
                ],
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 46,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "four",
                              },
                            },
                          ],
                          "location": 46,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 51,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "two",
                              },
                            },
                          ],
                          "location": 51,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "four",
                            },
                          },
                        ],
                        "location": 75,
                      },
                    },
                    "location": 80,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {},
                        "location": 82,
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_distinct_on.sql > line 32 1`] = `
[
  "SELECT DISTINCT ON (four) four,two
   FROM tenk1 WHERE four = 0 ORDER BY 1",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "distinctClause": [
              {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "four",
                      },
                    },
                  ],
                  "location": 20,
                },
              },
            ],
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 43,
                  "relname": "tenk1",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "A_Const": {
                      "ival": {
                        "ival": 1,
                      },
                      "location": 73,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 26,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "four",
                          },
                        },
                      ],
                      "location": 26,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 31,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "two",
                          },
                        },
                      ],
                      "location": 31,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "four",
                        },
                      },
                    ],
                    "location": 55,
                  },
                },
                "location": 60,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {},
                    "location": 62,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_distinct_on.sql > line 36 1`] = `
[
  "EXPLAIN (COSTS OFF)
SELECT DISTINCT ON (four) four,two
   FROM tenk1 WHERE four = 0 ORDER BY 1,2",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 9,
                },
              },
            ],
            "query": {
              "SelectStmt": {
                "distinctClause": [
                  {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "four",
                          },
                        },
                      ],
                      "location": 40,
                    },
                  },
                ],
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 63,
                      "relname": "tenk1",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "sortClause": [
                  {
                    "SortBy": {
                      "location": -1,
                      "node": {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 93,
                        },
                      },
                      "sortby_dir": "SORTBY_DEFAULT",
                      "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                    },
                  },
                  {
                    "SortBy": {
                      "location": -1,
                      "node": {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 95,
                        },
                      },
                      "sortby_dir": "SORTBY_DEFAULT",
                      "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                    },
                  },
                ],
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 46,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "four",
                              },
                            },
                          ],
                          "location": 46,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 51,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "two",
                              },
                            },
                          ],
                          "location": 51,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "four",
                            },
                          },
                        ],
                        "location": 75,
                      },
                    },
                    "location": 80,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {},
                        "location": 82,
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_distinct_on.sql > line 42 1`] = `
[
  "EXPLAIN (COSTS OFF)
SELECT DISTINCT ON (four) four,hundred
   FROM tenk1 WHERE four = 0 ORDER BY 1,2",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 9,
                },
              },
            ],
            "query": {
              "SelectStmt": {
                "distinctClause": [
                  {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "four",
                          },
                        },
                      ],
                      "location": 40,
                    },
                  },
                ],
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 67,
                      "relname": "tenk1",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "sortClause": [
                  {
                    "SortBy": {
                      "location": -1,
                      "node": {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 97,
                        },
                      },
                      "sortby_dir": "SORTBY_DEFAULT",
                      "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                    },
                  },
                  {
                    "SortBy": {
                      "location": -1,
                      "node": {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 99,
                        },
                      },
                      "sortby_dir": "SORTBY_DEFAULT",
                      "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                    },
                  },
                ],
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 46,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "four",
                              },
                            },
                          ],
                          "location": 46,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 51,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "hundred",
                              },
                            },
                          ],
                          "location": 51,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "four",
                            },
                          },
                        ],
                        "location": 79,
                      },
                    },
                    "location": 84,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {},
                        "location": 86,
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
